fix shop submit button

--- a/shop.html
+++ b/shop.html
@@ -183,7 +183,7 @@ function preview_image(event)
 			<textarea id="special_instruations" name="special_instruations" value=""></textarea>
 			<br>
 			<p>
-				<button type="button" onclick="">submit</button>
+				<button type="submit">submit</button>
 
 				<button type="button" class="attach" id="attach" onclick="document.getElementById('upload').click();" />attach&nbsp;&nbsp;image</button>
 				<input type="file" style="display:none;" id="upload" name="upload" accept="image/*" onchange="preview_image(event)"/>
