--- a/shop.html
+++ b/shop.html
@@ -134,10 +134,10 @@ function preview_image(event)
 <!--page specific-->
 
 	<div class="slides">
-		<img class="pics" src="assets/commissions/cat1_1.jpeg">
+		<img class="pics" src="assets/commissions/cat1_1.JPG">
 	</div>
 	<div class="slides">
-		<img class="pics" src="assets/commissions/cat1_2.jpeg">
+		<img class="pics" src="assets/commissions/cat1_2.JPG">
 	</div>
 	<div class="slides">
 		<img class="pics" src="assets/commissions/cat1_3.jpeg">
@@ -146,7 +146,7 @@ function preview_image(event)
 		<img class="pics" src="assets/commissions/cat2_1.jpeg">
 	</div>
 	<div class="slides">
-		<img class="pics" src="assets/commissions/cat2_2.jpeg">
+		<img class="pics" src="assets/commissions/cat2_2.JPG">
 	</div>
 	<div class="slides">
 		<img class="pics" src="assets/commissions/cat2_3.jpeg">
