index file updated for some thumbnails

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
 		<img src="assets/artwork/Losing My Grip.jpg" alt="painting of an owl sitting on a branch with human hands instead of talons">
 		<img src="assets/artwork/nothing more.jpg" alt="painting of a crow/raven with a human eye">
 		<img src="assets/artwork/fear.jpg" alt="paper cutout graphic of a hand partially covering an eye with the reflection of a monster hand in the eye">
-		<img src="assets/artwork/dahaht.jpg" alt="sketchy illustration of a girl braiding her hair">
 		<video controls><source src="assets/artwork/love.mp4" type="video/mp4" alt="animation of a girl getting her hair pushed behind her ear by someone out of frame, and then leaking pink goo from the eyes, nose, and mouth and falling over">Your browser does not support the video tag.</video>
-		<img src="assets/artwork/photosynthesmize.jpg">
-		<video controls src="assets/artwork/scream.mov" type="video/mov" alt="animation of a scream switch being pulling inside a mouth">Your browser does not support the video tag.</video>
-		<video controls><source src="assets/artwork/tcaoy.mp4" type="video/mp4" alt="animation of abstract light and colors">Your browser does not support the video tag.</video>
+		<img src="assets/artwork/dahaht.jpg" alt="sketchy illustration of a girl braiding her hair">
+		<img src="assets/artwork/photosynthesmize.jpg" alt="illlustration of a flower with a human face">
+		<video controls src="assets/artwork/scream.mov" type="video/mov" poster="assets/artwork/thumbnails/scream_cover.png" alt="animation of a scream switch being pulling inside a mouth">Your browser does not support the video tag.</video>
+		<video poster="assets/artwork/thumbnails/tcaoy_cover.png" controls><source src="assets/artwork/tcaoy.mp4" type="video/mp4" alt="animation of abstract light and colors">Your browser does not support the video tag.</video>
 		<img src="assets/artwork/mouth.gif" alt="animation of a mouth opeing and a beetle crawling on the tongue">
 		<video controls src="assets/artwork/ijwsp.mov" type="video/mov" alt="demo of an app where a spider creature gets scared if you make noise">Your browser does not support the video tag.</video>
 		<img src="assets/artwork/selfportrait.PNG" alt="digital drawing of a girl and bugs">
 		<video controls src="assets/artwork/Among the Moai.mov" type="video/mov" alt="3d animation of a ufo bringing the statues of easter island to life">Your browser does not support the video tag.</video>
-		<video controls><source src="assets/artwork/spider.mp4" type="video/mp4" alt="3d animation of a spider with a human-like head dancing">Your browser does not support the video tag.</video>
+		<video poster="assets/artwork/thumbnails/spider_cover.png" controls><source src="assets/artwork/spider.mp4" type="video/mp4" alt="3d animation of a spider with a human-like head dancing">Your browser does not support the video tag.</video>
 		<img src="assets/artwork/earthling.gif" alt="animation of an eye opening and plants growing out and an ant crawling out">
 	</div>
 
