--- a/index.html
+++ b/index.html
@@ -8,30 +8,35 @@
 </head>
 <style>
 	#artworks{
-		margin-top: 40px;
+
 	}
 	#artworks img{
 		width: 100%;
 		height: auto;
+		margin-top: 0%;
+		margin-bottom: 0%;
+		padding: 0px;
 	}
 	#artworks video{
 		width: 100%;
 		height: auto;
+		margin-top: 0%;
+		margin-bottom: 0%;
 	}
 
 	#back2top {
 	  display: none;
 	  position: fixed;
-	  bottom: 20px;
-	  right: 30px;
+	  bottom: 10vw;
+	  right: 10vw;
 	  z-index: 99;
 	  border: none;
 	  outline: none;
 	  background-color: #ff780050;
 	  color: #00000050;
 	  cursor: pointer;
-	  padding: 5px;
-	  border-radius: 5px;
+	  padding: 2vw;
+	  border-radius: 1vw;
 	  font-family: 'Amatic SC', serif;
 	  font-size: 30pt;
 	}
@@ -39,6 +44,25 @@
 	#back2top:hover {
 	  background-color: #ff7800;
 	  color: #000000;
+	}
+
+	@media (min-width: 1200px) {
+		#back2top {
+		  display: none;
+		  position: fixed;
+		  bottom: 5vw;
+		  right: 5vw;
+		  z-index: 99;
+		  border: none;
+		  outline: none;
+		  background-color: #ff780050;
+		  color: #00000050;
+		  cursor: pointer;
+		  padding: 2vw;
+		  border-radius: 1vw;
+		  font-family: 'Amatic SC', serif;
+		  font-size: 30pt;
+		}
 	}
 
 </style>
