--- a/estimate.html
+++ b/estimate.html
@@ -56,7 +56,7 @@
 	<div id="box">
 		<div class="bar1"></div>
 		<div class="bar1 corners"></div>
-  		<a id="annie">Annie Courtney</a>
+  		<a>Annie Courtney</a>
   		<div class="bar1 bar2"></div>
   		<div class="bar1 bar2 corners"></div>
   		<div id="nav">
