--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
 	<link rel = "stylesheet" type = "text/css" href = "genStyle.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Slab&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <script type='text/javascript'>
 function preview_image(event) 
 {
