--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
 		/*font-size: 17pt;*/
 		font-size: 4.5vw;
 		position: absolute;
-		margin-top: 0px;
-		margin-left: 20px;
+		margin-top: -4vw;
+		margin-left: 5vw;
 	}
 	#handles img{
 		height: 6vw;
@@ -24,9 +24,9 @@
 	}
 	#my_email #email_text{
 		position: absolute;
-		margin-top: .75vh;
+		margin-top: 1.23vw;
 /*		margin-top: 12px;*/
-		margin-left: 8px;
+		margin-left: 1.75vw;
 		text-decoration: none;
 		color: black;
 	}
@@ -38,35 +38,36 @@
 		position: absolute;
 		margin-top: .4vh;
 /*		margin-top: 9px;*/
-		margin-left: 5px;
+		margin-left: 1.15vw;
 		text-decoration: none;
 		color: black;
 	}
 	#doodle{
-		width: 96%;
+		width: 96vw;
 		height: auto;
+		margin-top: -3vw;
 	}
 	#email_box{
-		font-size: 16pt;
-		margin: -50px/*top*/ 20px/*right*/ 20px/*bottom*/ 20px/*left*/;
+		font-size: 5vw;
+		margin: -16vw/*top*/ 5vw/*right*/ 5vw/*bottom*/ 5vw/*left*/;
 	}
 	#email_box input{
 		width: 100%;
-		height: 3em;
-		margin-top: 10px;
-		margin-bottom: 10px;
-		font-size: 16pt;
+		height: 12vw;
+		margin-top: 1.5vw;
+		margin-bottom: 1.5vw;
+		font-size: 5vw;
 		font-family: 'Josefin Slab', serif;
-		padding: 0px 1px 0px 15px;;
+		padding: 0vw 0vw 0vw 1.5vw;;
 	}
 	#email_box textarea{
 		width: 100%;
-		height: 10em;
-		margin-top: 10px;
+		height: 45vw;
+		margin-top: 1.5vw;
 		margin-bottom: 0px;
-		font-size: 16pt;
+		font-size: 5vw;
 		font-family: 'Josefin Slab', serif;
-		padding: 10px 1px 0px 15px;
+		padding: 1.5vw 1.5vw 0vw 2vw;
 	}
 	#email_box button{
 		background-color: black;
@@ -74,10 +75,11 @@
 		border: 0;
 		color: white;
 		font-family: 'Amatic SC', cursive;
-		font-size: 21pt;
-		margin-top: 8px;
+		font-size: 10vw;
+		padding-left: 2.2vw;
+		padding-right: 2vw;
+		margin-top: 2vw;
 		margin-right: 0px;
-		padding-left: 7px;
 		float: right;
 	}
 	#email_box button:hover{
