end of night 10/9

--- a/estimate.html
+++ b/estimate.html
@@ -12,12 +12,12 @@
 	#header{
 		font-family: 'Amatic SC', cursive;
 		font-weight: 700;
-		font-size: 27pt;
-		margin-left: 20px;
+		font-size: 9vw;
+		margin-left: 5vw;
 	}
 	#calc_box{
 		font-size: 18pt;
-		margin: 20px/*top*/ 20px/*right*/ 20px/*bottom*/ 20px/*left*/;
+		margin: 5vw/*top*/ 20px/*right*/ 20px/*bottom*/ 5vw/*left*/;
 	}
 	#calc_box input{
 		font-family: 'Josefin Slab', serif;
@@ -34,10 +34,11 @@
 		border: 0;
 		color: white;
 		font-family: 'Amatic SC', cursive;
-		font-size: 21pt;
+		font-size: 8vw;
 		float: left;
-		margin-top: 10px;
-		margin-bottom: 20px;
+		margin-top: 2vw;
+		padding-left: 2.2vw;
+		padding-right: 2vw;
 	}
 	#calc_box button:hover{
 		background-color: #ff7800;
@@ -57,7 +58,7 @@
 	<div id="box">
 		<div class="bar1"></div>
 		<div class="bar1 corners"></div>
-  		<a>Annie Courtney</a>
+  		<a id="annie">Annie Courtney</a>
   		<div class="bar1 bar2"></div>
   		<div class="bar1 bar2 corners"></div>
   		<div id="nav">
@@ -65,7 +66,7 @@
   			<img id="dot1"src="assets/dot.svg">
   			<a id="shop" href="shop.html" target="_self">shop</a>
   			<img id="dot2" src="assets/dot.svg">
-  			<a id="contact" href="contact.html">contact me</a>
+  			<a id="contact" class="page_title" href="contact.html">contact me</a>
 		</div>
 	</div>
 <div id="inner_box">
