planning for mobile landscape mode

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 		background-color: #ff7800;
 		cursor: pointer;
 	}
-	@media (min-width: 992px) {
+	@media (min-width: 992px), (orientation: landscape) {
 		#inner_box{
 			display: grid;
 			grid-template-areas: 
