--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  color: #000000;
 	}
 
-	@media (min-width: 1200px) {
+	@media (min-width: 992px), (orientation: landscape) {
 		#back2top {
 		  display: none;
 		  position: fixed;
