--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <style>
 	#artworks{
-
+		/*background-color: pink;*/
+		display: grid;
+		grid-gap: 0;
 	}
 	#artworks img{
 		width: 100%;
@@ -28,41 +30,138 @@
 	#back2top {
 	  display: none;
 	  position: fixed;
-	  bottom: 10vw;
-	  right: 10vw;
+	  bottom: 6vw;
+	  right: 6vw;
 	  z-index: 99;
 	  border: none;
 	  outline: none;
-	  background-color: #ff780050;
-	  color: #00000050;
+	  color: #ff780075;
+	  background-color: transparent;
 	  cursor: pointer;
-	  padding: 2vw;
-	  border-radius: 1vw;
 	  font-family: 'Amatic SC', serif;
-	  font-size: 30pt;
+	  font-size: 10vw;
 	}
 
 	#back2top:hover {
-	  background-color: #ff7800;
-	  color: #000000;
+	  color: #ff7800;
 	}
 
 	@media (min-width: 992px), (orientation: landscape) {
 		#back2top {
-		  display: none;
-		  position: fixed;
-		  bottom: 5vw;
-		  right: 5vw;
-		  z-index: 99;
-		  border: none;
-		  outline: none;
-		  background-color: #ff780050;
-		  color: #00000050;
-		  cursor: pointer;
-		  padding: 2vw;
-		  border-radius: 1vw;
-		  font-family: 'Amatic SC', serif;
-		  font-size: 30pt;
+		  bottom: 3vw;
+		  right: 3vw;
+		  color: #ff780075;
+		  background-color: transparent;
+		  font-size: 7vw;
+		}
+		#artworks{
+			display: grid;
+		    grid-template-columns: repeat(15, 1fr);
+		    grid-template-rows: repeat(22, 10vw);
+		    grid-gap: 0;
+		}
+		#artworks img{
+			width: 100%;
+		    height: 100%;
+		    object-fit: cover;
+
+		}
+		#artworks video{
+			width: 100%;
+		    height: 100%;
+		    object-fit: cover;
+		}
+		#flatbill{
+			grid-column-start: 1;
+		    grid-column-end: 7;
+		    grid-row-start: 1;
+		    grid-row-end: 4;
+		}
+		#owl{
+			grid-column-start: 7;
+		    grid-column-end: 10;
+		    grid-row-start: 1;
+		    grid-row-end: 4;
+		}
+		#raven{
+			grid-column-start:10;
+		    grid-column-end: 16;
+		    grid-row-start: 1;
+		    grid-row-end: 4;
+		}
+		#love{
+			grid-column-start:1;
+		    grid-column-end: 10;
+		    grid-row-start: 4;
+		    grid-row-end: 7;
+		}
+		#fear{
+			grid-column-start: 10;
+		    grid-column-end: 16;
+		    grid-row-start: 4;
+		    grid-row-end: 7;
+		}
+		#flower{
+			grid-column-start: 1;
+		    grid-column-end: 7;
+		    grid-row-start: 7;
+		    grid-row-end: 11;
+		}
+		#braid{
+			grid-column-start: 7;
+		    grid-column-end: 16;
+		    grid-row-start: 7;
+		    grid-row-end: 11;
+		}
+		#abstract{
+			grid-column-start: 1;
+			grid-column-end: 7;
+		    grid-row-start: 11;
+		    grid-row-end: 13;
+		}
+		#earthling{
+			grid-column-start: 7;
+			grid-column-end: 10;
+		    grid-row-start: 11;
+		    grid-row-end: 13;
+		}
+		#scream{
+			grid-column-start: 10;
+		    grid-column-end: 16;
+		    grid-row-start: 11;
+		    grid-row-end: 13;
+		}
+		#privacy{
+			grid-column-start: 1;
+		    grid-column-end: 10;
+		    grid-row-start: 13;
+		    grid-row-end: 17;
+		}
+		#mouth{
+			grid-column-start: 10;
+		    grid-column-end: 16;
+		    grid-row-start: 13;
+		    grid-row-end: 17;
+		}
+		#self{
+			grid-column-start: 1;
+		    grid-column-end: 10;
+		    grid-row-start: 17;
+		    grid-row-end: 21;
+		}
+		#spider{
+			grid-column-start: 10;
+		    grid-column-end: 16;
+		    grid-row-start: 17;
+		    grid-row-end: 19;
+
+		}
+		#moai{
+			grid-column-start: 10;
+		    grid-column-end: 16;
+		    grid-row-start: 19;
+		    grid-row-end: 21;
+
 		}
 	}
 
@@ -85,21 +184,21 @@
 <div id="inner_box">
 <!--page specific-->
 	<div id="artworks">
-		<img src="assets/artwork/En Route.JPG" alt="painting of a rose flatbill bird flying with human arms under her/his/their wings">
-		<img src="assets/artwork/Losing My Grip.jpg" alt="painting of an owl sitting on a branch with human hands instead of talons">
-		<img src="assets/artwork/nothing more.jpg" alt="painting of a crow/raven with a human eye">
-		<img src="assets/artwork/fear.jpg" alt="paper cutout graphic of a hand partially covering an eye with the reflection of a monster hand in the eye">
-		<video controls><source src="assets/artwork/love.mp4" type="video/mp4" alt="animation of a girl getting her hair pushed behind her ear by someone out of frame, and then leaking pink goo from the eyes, nose, and mouth and falling over">Your browser does not support the video tag.</video>
-		<img src="assets/artwork/dahaht.jpg" alt="sketchy illustration of a girl braiding her hair">
-		<img src="assets/artwork/photosynthesmize.jpg" alt="illlustration of a flower with a human face">
-		<video controls src="assets/artwork/scream.mov" type="video/mov" poster="assets/artwork/thumbnails/scream_cover.png" alt="animation of a scream switch being pulling inside a mouth">Your browser does not support the video tag.</video>
-		<video poster="assets/artwork/thumbnails/tcaoy_cover.png" controls><source src="assets/artwork/tcaoy.mp4" type="video/mp4" alt="animation of abstract light and colors">Your browser does not support the video tag.</video>
-		<img src="assets/artwork/mouth.gif" alt="animation of a mouth opeing and a beetle crawling on the tongue">
-		<video controls src="assets/artwork/ijwsp.mov" type="video/mov" alt="demo of an app where a spider creature gets scared if you make noise">Your browser does not support the video tag.</video>
-		<img src="assets/artwork/selfportrait.PNG" alt="digital drawing of a girl and bugs">
-		<video controls src="assets/artwork/Among the Moai.mov" type="video/mov" alt="3d animation of a ufo bringing the statues of easter island to life">Your browser does not support the video tag.</video>
-		<video poster="assets/artwork/thumbnails/spider_cover.png" controls><source src="assets/artwork/spider.mp4" type="video/mp4" alt="3d animation of a spider with a human-like head dancing">Your browser does not support the video tag.</video>
-		<img src="assets/artwork/earthling.gif" alt="animation of an eye opening and plants growing out and an ant crawling out">
+		<img id="flatbill" src="assets/artwork/En Route.JPG" alt="painting of a rose flatbill bird flying with human arms under her/his/their wings">
+		<img id="owl" src="assets/artwork/Losing My Grip.jpg" alt="painting of an owl sitting on a branch with human hands instead of talons">
+		<img id="raven" src="assets/artwork/nothing more.jpg" alt="painting of a crow/raven with a human eye">
+		<img id="fear" src="assets/artwork/fear.jpg" alt="paper cutout graphic of a hand partially covering an eye with the reflection of a monster hand in the eye">
+		<video id="love" controls><source src="assets/artwork/love.mp4" type="video/mp4" alt="animation of a girl getting her hair pushed behind her ear by someone out of frame, and then leaking pink goo from the eyes, nose, and mouth and falling over">Your browser does not support the video tag.</video>
+		<img id="braid" src="assets/artwork/dahaht.jpg" alt="sketchy illustration of a girl braiding her hair">
+		<img id="flower" src="assets/artwork/photosynthesmize.jpg" alt="illlustration of a flower with a human face">
+		<video id="scream" controls src="assets/artwork/scream.mov" type="video/mov" poster="assets/artwork/thumbnails/scream_cover.png" alt="animation of a scream switch being pulling inside a mouth">Your browser does not support the video tag.</video>
+		<video id="abstract" poster="assets/artwork/thumbnails/tcaoy_cover.png" controls><source src="assets/artwork/tcaoy.mp4" type="video/mp4" alt="animation of abstract light and colors">Your browser does not support the video tag.</video>
+		<img id="mouth" src="assets/artwork/mouth.gif" alt="animation of a mouth opeing and a beetle crawling on the tongue">
+		<video id="privacy" controls src="assets/artwork/ijwsp.mov" type="video/mov" alt="demo of an app where a spider creature gets scared if you make noise">Your browser does not support the video tag.</video>
+		<img id="self" src="assets/artwork/selfportrait.PNG" alt="digital drawing of a girl and bugs">
+		<video id="moai" controls src="assets/artwork/Among the Moai.mov" type="video/mov" alt="3d animation of a ufo bringing the statues of easter island to life">Your browser does not support the video tag.</video>
+		<video id="spider" poster="assets/artwork/thumbnails/spider_cover.png" controls><source src="assets/artwork/spider.mp4" type="video/mp4" alt="3d animation of a spider with a human-like head dancing">Your browser does not support the video tag.</video>
+		<img id="earthling" src="assets/artwork/earthling.gif" alt="animation of an eye opening and plants growing out and an ant crawling out">
 	</div>
 
 	<button onclick="topFunction()" id="back2top" title="Go to top">&#x2191;</button>
