artwork page grid redo

--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
 		  font-size: 7vw;
 		}
 		#artworks{
+			margin-right: 1vw;
+			margin-left: 1vw;
 			display: grid;
 		    grid-template-columns: repeat(15, 1fr);
-		    grid-template-rows: repeat(22, 10vw);
-		    grid-gap: 0;
+		    grid-template-rows: repeat(24, 10vw);
+		    grid-gap: 1vw;
 		}
 		#artworks img{
 			width: 100%;
@@ -71,97 +73,95 @@
 		    height: 100%;
 		    object-fit: cover;
 		}
-		#flatbill{
+		#owl{
 			grid-column-start: 1;
 		    grid-column-end: 7;
 		    grid-row-start: 1;
-		    grid-row-end: 4;
-		}
-		#owl{
-			grid-column-start: 7;
-		    grid-column-end: 10;
-		    grid-row-start: 1;
-		    grid-row-end: 4;
+		    grid-row-end: 7;
 		}
 		#raven{
-			grid-column-start:10;
+			grid-column-start:7;
 		    grid-column-end: 16;
 		    grid-row-start: 1;
-		    grid-row-end: 4;
+		    grid-row-end: 5;
 		}
 		#love{
-			grid-column-start:1;
-		    grid-column-end: 10;
-		    grid-row-start: 4;
-		    grid-row-end: 7;
+			grid-column-start: 7;
+		    grid-column-end:16;
+		    grid-row-start: 9;
+		    grid-row-end: 12;
 		}
-		#fear{
-			grid-column-start: 10;
-		    grid-column-end: 16;
-		    grid-row-start: 4;
-		    grid-row-end: 7;
-		}
-		#flower{
+		#braid{
 			grid-column-start: 1;
 		    grid-column-end: 7;
 		    grid-row-start: 7;
-		    grid-row-end: 11;
+		    grid-row-end: 9;
 		}
-		#braid{
-			grid-column-start: 7;
+		#flatbill{
+			grid-column-start:7;
 		    grid-column-end: 16;
-		    grid-row-start: 7;
-		    grid-row-end: 11;
+		    grid-row-start: 5;
+		    grid-row-end: 9;
 		}
-		#abstract{
+		#fear{
 			grid-column-start: 1;
-			grid-column-end: 7;
-		    grid-row-start: 11;
-		    grid-row-end: 13;
-		}
-		#earthling{
-			grid-column-start: 7;
-			grid-column-end: 10;
-		    grid-row-start: 11;
-		    grid-row-end: 13;
+		    grid-column-end: 7;
+		    grid-row-start: 9;
+		    grid-row-end: 12;
 		}
 		#scream{
-			grid-column-start: 10;
+			grid-column-start: 1;
+		    grid-column-end: 9;
+		    grid-row-start: 12;
+		    grid-row-end: 15;
+		}
+		#flower{
+			grid-column-start: 9;
 		    grid-column-end: 16;
-		    grid-row-start: 11;
-		    grid-row-end: 13;
+		    grid-row-start: 12;
+		    grid-row-end: 16;
+		}
+		#earthling{
+			grid-column-start: 1;
+			grid-column-end: 5;
+		    grid-row-start: 15;
+		    grid-row-end: 18;
+		}
+		#mouth{
+			grid-column-start: 5;
+		    grid-column-end: 9;
+		    grid-row-start: 15;
+		    grid-row-end: 18;
+		}
+		#abstract{
+			grid-column-start: 9;
+			grid-column-end: 16;
+		    grid-row-start: 16;
+		    grid-row-end: 18;
 		}
 		#privacy{
 			grid-column-start: 1;
-		    grid-column-end: 10;
-		    grid-row-start: 13;
-		    grid-row-end: 17;
-		}
-		#mouth{
-			grid-column-start: 10;
-		    grid-column-end: 16;
-		    grid-row-start: 13;
-		    grid-row-end: 17;
+		    grid-column-end: 9;
+		    grid-row-start: 18;
+		    grid-row-end: 21;
 		}
 		#self{
-			grid-column-start: 1;
-		    grid-column-end: 10;
-		    grid-row-start: 17;
-		    grid-row-end: 21;
-		}
-		#spider{
-			grid-column-start: 10;
+			grid-column-start: 9;
 		    grid-column-end: 16;
-		    grid-row-start: 17;
-		    grid-row-end: 19;
-
+		    grid-row-start: 18;
+		    grid-row-end: 21;
 		}
 		#moai{
-			grid-column-start: 10;
+			grid-column-start: 1;
+		    grid-column-end: 9;
+		    grid-row-start: 21;
+		    grid-row-end: 23;
+		}
+		#spider{
+			grid-column-start: 9;
 		    grid-column-end: 16;
-		    grid-row-start: 19;
-		    grid-row-end: 21;
-
+		    grid-row-start: 21;
+		    grid-row-end: 23;
 		}
 	}
 
