mobile style fixes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	#artworks{
 		/*background-color: pink;*/
 		display: grid;
-		grid-gap: 0;
+		grid-gap: 3vw;
 	}
 	#artworks img{
 		width: 100%;
