--- a/contact.html
+++ b/contact.html
@@ -64,22 +64,22 @@
 		width: 100%;
 		height: 45vw;
 		margin-top: 1.5vw;
-		margin-bottom: 0px;
+		margin-bottom: 0;
 		font-size: 5vw;
 		font-family: 'Josefin Slab', serif;
 		padding: 1.5vw 1.5vw 0vw 2vw;
 	}
 	#email_box button{
 		background-color: black;
-		border-radius: 0px;
+		border-radius: 0;
 		border: 0;
 		color: white;
 		font-family: 'Amatic SC', cursive;
-		font-size: 10vw;
+		font-size: 7vw;
 		padding-left: 2.2vw;
 		padding-right: 2vw;
 		margin-top: 2vw;
-		margin-right: 0px;
+		margin-right: 0;
 		float: right;
 	}
 	#email_box button:hover{
