--- a/estimate.html
+++ b/estimate.html
@@ -14,6 +14,8 @@
 		font-weight: 700;
 		font-size: 9vw;
 		margin-left: 5vw;
+		margin-top: 0vw;
+		margin-bottom: 0vw;
 	}
 	#calc_box{
 		font-size: 18pt;
@@ -21,20 +23,23 @@
 	}
 	#calc_box input{
 		font-family: 'Josefin Slab', serif;
-		width: 2.5em;
+		width: 18vw;
 		font-size: 30pt;
 		text-align: center;
-		padding: 10px/*top*/ 0px/*left*/ 10px/*bottom*/ 0px/*right*/;
+		padding: 2vw/*top*/ 0vw/*left*/ 0vw/*bottom*/ 2vw/*right*/;
 		margin-top: 0px;
 		margin-bottom: 20px;
 	}
 	#calc_box button{
 		background-color: black;
-		border-radius: 0px;
+		border-radius: 0;
 		border: 0;
 		color: white;
 		font-family: 'Amatic SC', cursive;
-		font-size: 8vw;
+		font-size: 7vw;
+		float: right;
+		padding-left: 2.2vw;
+		padding-right: 2vw;
 		float: left;
 		margin-top: 2vw;
 		padding-left: 2.2vw;
@@ -72,7 +77,7 @@
 <div id="inner_box">
 <!--page specific-->
 
-	<a id="header">Custom Painting Pricing:</a>
+	<p id="header">Custom Painting Pricing:</p>
 	<div id="calc_box">
 		<input type="number" id="length" value="0">
 		inches by 
