--- a/shop.html
+++ b/shop.html
@@ -29,90 +29,108 @@ function preview_image(event)
 	}	
 	.slides img{
 		display: block;
-		height: 200pt;
+		height: 60vw;
 		width: auto;
 		margin-left: auto;
 		margin-right: auto;
-		margin-top: 20px;
+		margin-top: 7vw;
+		padding: 0;
+		margin-bottom: 0;
 	}
 	.slide_button{
-		font-family: 'Josefin Slab', serif;
-		font-size: 25pt;
-		color: #00000025;
-		border-radius: 5=0px;
+		/*z-index: 99;*/
+		font-family: /*'Amatic SC',*/ cursive;
+		font-size: 7vw;
+		color: #ffffff;
+		border-radius: 2vw;
 		border: 0;
-		background-color: #00000000;
+		background-color: #000000;
+		padding-left: 3vw;
+		padding-right: 3vw;
 		position: absolute;
-		top: 230pt;
+		top: 67vw;
 		font-weight: 700;
 	}
 	.prev{
-		left: 10px;
+		left: 6vw;
 	}
 	.next{
-		right: 10px;
+		right: 6vw;
 	}
 	.slide_button:hover{
-		color: #ff7800;
+		color: #ffffff;
+		background-color: #ff7800;
 	}
 	#commission{
-		margin: 20px/*top*/ 20px/*right*/ 20px/*bottom*/ 20px/*left*/;
-	}
-	#commission #header{
+		margin-top: 4vw;
+		margin-right: 5vw;
+		margin-left: 5vw;
 		font-family: 'Amatic SC', cursive;
-		font-size: 25pt;
+		font-size: 7vw;
 		font-weight: 700;
+		margin-bottom: 0;
 	}
-	#commission #estimate{
+	#estimate{
+		margin-right: 5vw;
+		margin-left: 5vw;
 		text-decoration: none;
 		color: black;
-		font-size: 19pt;
+		font-size: 5.5vw;
+		margin-top: .5vw;
 	}
-	#commission #estimate:hover{
+	#estimate a{
+		text-decoration: none;
+		color: black;
+	}
+	#estimate a:hover{
 		color: #ff7800;
 	}
 	#email_box{
-		font-size: 16pt;
-		margin: 0px 20px 20px 20px;
+		font-size: 5vw;
+		margin: 0px 5vw 5vw 5vw;
 	}
 	#email_box input{
 		width: 100%;
-		height: 3em;
-		margin-top: 10px;
-		margin-bottom: 10px;
-		font-size: 16pt;
+		height: 12vw;
+		margin-top: 1.5vw;
+		margin-bottom: 1.5vw;
+		font-size: 5vw;
 		font-family: 'Josefin Slab', serif;
-		padding: 0px 1px 0px 15px;
+		padding: 0 0vw 0  1.5vw;
 	}
 	#email_box textarea{
 		width: 100%;
-		height: 5em;
-		margin-top: 10px;
-		margin-bottom: 0px;
-		font-size: 16pt;
+		height: 28vw;
+		margin-top: 1.5vw;
+		margin-bottom: 0;
+		font-size: 5vw;
 		font-family: 'Josefin Slab', serif;
-		padding: 10px 1px 0px 15px;
+		padding: 1.5vw 1.5vw 0vw 2vw;
 	}
 	#email_box button{
 		background-color: black;
-		border-radius: 0px;
+		border-radius: 0;
 		border: 0;
 		color: white;
 		font-family: 'Amatic SC', cursive;
-		font-size: 21pt;
+		font-size: 7vw;
 		float: right;
-		padding-left: 7px;
-		padding-right: 7px;
+		padding-left: 2.2vw;
+		padding-right: 2vw;
+		margin-top: -1.5vw;
+		margin-right: 0;
 	}
 	#email_box .attach{
 		margin-right: 25px;
 	}
 	#email_box button:hover{
 		background-color: #ff7800;
+		cursor: pointer;
 	}
 	#output_image{
-	 	max-width:300px;
-	 	margin: 20px/*top*/ 0px/*right*/ 20px/*bottom*/ 0px/*left*/;
+	 	max-width: 50vw;
+
+	 	margin: 7vw/*top*/ 0/*right*/ 7vw/*bottom*/ 0/*left*/;
 	}
 </style>
 <body>
@@ -158,11 +176,8 @@ function preview_image(event)
 	<button class="slide_button prev" onclick="plusSlides(-1)"><</button>
 	<button class="slide_button next" style="display: inline;" onclick="plusSlides(1)">></button>
 
-	<div id="commission">
-		<a id="header">commission a custom painting</a>
-		<br>
-		<a id="estimate" href="estimate.html">click for price estimate</a>
-	</div>
+	<p id="commission">commission a custom painting</p>
+	<p id="estimate"><a href="estimate.html">click for price estimate</a></p>
 
 	<div id="email_box">
 		<form method="POST" action="https://formsubmit.co/annie.t.courtney@gmail.com" enctype="multipart/form-data">
