--- a/shop.html
+++ b/shop.html
@@ -117,7 +117,7 @@ function preview_image(event)
 		float: right;
 		padding-left: 2.2vw;
 		padding-right: 2vw;
-		margin-top: -1.5vw;
+		margin-top: 2vw;
 		margin-right: 0;
 	}
 	#email_box .attach{
@@ -132,6 +132,68 @@ function preview_image(event)
 
 	 	margin: 7vw/*top*/ 0/*right*/ 7vw/*bottom*/ 0/*left*/;
 	}
+
+/*estimate stuff below*/
+	.estimate_bar {
+		position: absolute;
+		background-color: #ffddc7;
+		height: 9vw;
+		width: 75vw;
+		border-radius: 1vw;
+		left: 0;
+		margin-top: .6vw;
+	}
+	.corner{
+		border-radius: 0px;
+		width: 10%;
+	}
+	#header{
+		position: relative;
+		font-family: 'Amatic SC', cursive;
+		font-weight: 700;
+		font-size: 8vw;
+		margin-left: 16vw;
+		margin-top: 0vw;
+		margin-bottom: 5vw;
+	}
+	#calc_box{
+		font-size: 18pt;
+		margin: 0vw/*top*/ 5vw/*right*/ 0vw/*bottom*/ 5vw/*left*/;
+	}
+	#calc_box input{
+		font-family: 'Josefin Slab', serif;
+		width: 18vw;
+		font-size: 30pt;
+		text-align: center;
+		padding: 2vw/*top*/ 0vw/*left*/ 0vw/*bottom*/ 2vw/*right*/;
+		margin-top: 0px;
+		margin-bottom: 5vw;
+	}
+	#calc_box button{
+		background-color: black;
+		border-radius: 0;
+		border: 0;
+		color: white;
+		font-family: 'Amatic SC', cursive;
+		font-size: 7vw;
+		float: left;
+		margin-top: 2vw;
+		padding-left: 2.2vw;
+		padding-right: 2vw;
+	}
+	#calc_box button:hover{
+		background-color: #ff7800;
+	}
+	#output_price{
+		margin-top: 10px;
+		font-size: 20pt;
+	}
+
+	#doodle{
+		width: 100%;
+		height: auto;
+	}
+
 </style>
 <body>
 	<div id="box">
@@ -177,7 +239,7 @@ function preview_image(event)
 	<button class="slide_button next" style="display: inline;" onclick="plusSlides(1)">></button>
 
 	<p id="commission">commission a custom painting</p>
-	<p id="estimate"><a href="estimate.html">click for price estimate</a></p>
+	<p id="estimate"><a href="#header">click for price estimate</a></p>
 
 	<div id="email_box">
 		<form method="POST" action="https://formsubmit.co/annie.t.courtney@gmail.com" enctype="multipart/form-data">
@@ -206,7 +268,25 @@ function preview_image(event)
 			</p>
 		</form>
 	</div>
-
+<!-- estimate stuff below -->
+  	<div class="estimate_bar "></div>
+  	<div class="estimate_bar corner"></div>
+	<p id="header">Custom Painting Pricing</p>
+	<img id="doodle" src="assets/hanging_pictures.png">
+	<div id="calc_box">
+		<input type="number" id="length" value="0">
+		inches by 
+		<input type="number" id="width" value="0">
+		inches
+		<br>
+		<button type="button"
+		onclick="document.getElementById('output_price').innerHTML = output()">
+		estimate&nbsp;&nbsp;price</button>
+		<br>
+		<br>
+		<br>
+		<p id="output_price"></p>
+	</div>
 <!-- ^^^ page specific ^^^ -->
 </div>
 	<div id="footer">All work &#169; Annie Courtney unless otherwise  noted.</div>
@@ -237,6 +317,53 @@ function preview_image(event)
 	  s[slideIndex-1].style.display = "block";  
 	  // dots[slideIndex-1].className += " active";
 	}
+
+
+// estimate stuff below
+	function lowEstimate(x,y){
+		z = x*y;
+
+		canvas = 0;
+
+		if(z<200){
+			canvas=z*.1
+		}else if(z<1300){
+			canvas=z*.05
+		}else{
+			canvas=z*.01;
+		}
+
+		paint = 10 * (z/100);
+
+		hours = (15 * ((z/2)/16))+(7.5*((z/2)/16)); //low estimate (only half of the canvas is full detail (ie full hour rate), (other half is half rate))
+
+		return Math.ceil(canvas + paint + hours);
+
+	}
+	function highEstimate(x,y){
+		z = x*y;
+
+		canvas = 0;
+
+		if(z<200){
+			canvas=z*.1
+		}else if(z<1300){
+			canvas=z*.05
+		}else{
+			canvas=z*.01;
+		}
+
+		paint = 10 * (z/100);
+
+		hours = 15 * (z/16); //high estimate (the whole canvas is full detail)
+
+		return Math.ceil(canvas + paint + hours);
+	}
+	function output(){
+		return '$'+lowEstimate(document.getElementById('length').value, document.getElementById('width').value)+' - $'+highEstimate(document.getElementById('length').value, document.getElementById('width').value)+' (depending on the level of detail)';
+	}
+</script>
+
 </script>
 </body>
 </html> 
