sizing and style fixes

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	#back2top {
 	  display: none;
 	  position: fixed;
-	  bottom: 6vw;
-	  right: 6vw;
+	  bottom: 2vw;
+	  right: 2vw;
 	  z-index: 99;
 	  border: none;
 	  outline: none;
@@ -40,6 +40,7 @@
 	  cursor: pointer;
 	  font-family: 'Amatic SC', serif;
 	  font-size: 10vw;
+	  font-weight: bolder;
 	}
 
 	#back2top:hover {
@@ -48,8 +49,8 @@
 
 	@media (min-width: 992px), (orientation: landscape) {
 		#back2top {
-		  bottom: 3vw;
-		  right: 3vw;
+		  bottom: 2vw;
+		  right: 2vw;
 		  color: #ff780075;
 		  background-color: transparent;
 		  font-size: 7vw;
