--- a/shop.html
+++ b/shop.html
@@ -39,14 +39,14 @@ function preview_image(event)
 	}
 	.slide_button{
 		/*z-index: 99;*/
-		font-family: /*'Amatic SC',*/ cursive;
+		font-family: 'Josefin Slab', serif;
 		font-size: 7vw;
 		color: #ffffff;
 		border-radius: 2vw;
 		border: 0;
 		background-color: #000000;
-		padding-left: 3vw;
-		padding-right: 3vw;
+		padding-left: 1.5vw;
+		padding-right: 1.5vw;
 		position: absolute;
 		top: 67vw;
 		font-weight: 700;
