small mobile style fixes

--- a/index.html
+++ b/index.html
@@ -34,16 +34,20 @@
 	  right: 2vw;
 	  border: none;
 	  outline: none;
-	  color: #ff780075;
-	  background-color: transparent;
+	  color: #ff780085;
+	  background-color: #00000020;
 	  cursor: pointer;
-	  font-family: 'Amatic SC', serif;
-	  font-size: 10vw;
+	  /*font-family: 'Amatic SC', serif;*/
 	  font-weight: bolder;
+	  font-size: 10vw;
+	  padding-bottom: 2vw;
+	  border-radius: 2vw;
+	  /*font-weight: 700;*/
 	}
 
 	#back2top:hover {
 	  color: #ff7800;
+	  background-color: black;
 	}
 
 /*lightbox below*/
@@ -57,7 +61,7 @@
 
 	.title-container {
 	  text-align: center;
-	  margin-top: -10vw;
+	  margin-top: -8.5vw;
 	  color: white;
 	  font-size: 8vw;
 	  font-family: 'Amatic SC', cursive;
@@ -115,9 +119,9 @@
 	.close {
 	  color: white;
 	  position: absolute;
-	  top: 1vw;
+	  top: 0vw;
 	  right: 3vw;
-	  font-size: 10vw;
+	  font-size: 13vw;
 	  /*font-weight: bold;*/
 	}
 	.close:hover,
@@ -153,20 +157,21 @@
 	  margin-top: 0vw;
 	  color: white;
 	  font-family: 'Josefin Slab', serif;
+	  font-weight: 400;
 	  /*font-weight: bold;*/
-	  font-size: 5vw;
+	  font-size: 8vw;
 /*	  transition: 0.6s ease;*/
 /*	  border-radius: 0 3px 3px 0*/;
 /*	  user-select: none;
 	  -webkit-user-select: none;*/
 	}
 	.prev{
-		left: 2vw;
+		left: 5vw;
 	}
 
 	/* Position the "next button" to the right */
 	.next {
-	  right: 2vw;
+	  right: 5vw;
 	  /*border-radius: 3px 0 0 3px;*/
 	}
 
